--- a/dataland-frontend/index.html
+++ b/dataland-frontend/index.html
@@ -12,8 +12,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/gfx_logo_d_orange_S_favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/gfx_logo_d_orange_S_favicon-16x16.png" />
     <link rel="manifest" href="/static/site.webmanifest" />
     <link rel="mask-icon" href="/static/safari-pinned-tab.svg" color="#5bbad5" />
     <meta name="msapplication-TileColor" content="#da532c" />
